[package]
name = "doublebuf"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"
description = "Concurrent auto-swapping double buffer"
license = "MIT"
categories = ["embedded", "no-std", "concurrency"]
keywords = ["double-buffer"]
authors = ["Alexander Rogovskyy"]
readme = "README.md"
repository = "https://github.com/ARogovskyy/doublebuf"

[dependencies]
critical-section = "1.2.0"

[dev-dependencies]
critical-section = { version = "1.2.0", features = ["std"] }
static_assertions = "1.1.0"
